# CW3

./: README.md  main.py  pyproject.toml
config/: .env.example  config.py
src/api/: hh_api.py
src/database/: db_creator.py  db_manager.py
src/models/: models.py
